05.kubernetes/yaml-files/12.c.user-management-init-containers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dynamic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-dynamic
  template:
    metadata:
      labels:
        app: mongo-dynamic
    spec:
      containers:
      - name: mongo
        image: mongo
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-dynamic-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo-dynamic
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
# USER-MANAGEMENT SPRING BOOT DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: ganadevops/user-management:latest       # Replace with your image repo if using ECR/DockerHub
          ports:
            - containerPort: 8080
---
# USER-MANAGEMENT SERVICE
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  type: ClusterIP
  selector:
    app: user-management
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-management-service
            port:
              number: 80
